# uv_demo_project

./: .gitignore  README.md  change_file_name.py  main.py  pyproject.toml  pytest.ini  yandex.py  yandex2.py
file/: 文件改名.py
tests/: conftest.py  test_add.py  test_demo_api.py
tests/data/: api_data.yaml
